# atd

./: docker-compose.yaml  pyproject.toml  requirements.txt
basicsr/: train.py  version.py
basicsr/data/: paired_image_dataset.py  transforms.py
basicsr/models/: atd_model.py  base_model.py  sr_model.py
basicsr/utils/: __init__.py  img_util.py
datasets/: README.md
